--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="tic-tac-toe.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <style>
     body {
@@ -41,7 +41,8 @@
         </div>
         <button id="new-btn">New Game</button>
         <button id="reset-btn">Reset Game</button>
-        <script src="style.js"></script>
+        <script src="main.js"></script>
 </body>
+
 
 </html>
