--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-form</title>
-    <link rel="stylesheet" href="tic-tac-toe.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -23,5 +23,6 @@
     </div>
     <script src="login.js"></script>
 </body>
+
 
 </html>
