--- a/create.html
+++ b/create.html
@@ -21,7 +21,7 @@
                 <input type="password" id="confirmpassword" placeholder="ConfirmPassword"><br>
                 <p id="error"></p>
                 <button type="submit" id="signupBtn">Signup</button><br>
-                <p>Already have an account?<span onclick="window.location.href='login.html'">Login</span></p>
+                <p>Already have an account?<span onclick="window.location.href='index.html'">Login</span></p>
             </div>
         </div>
     </div>
@@ -30,4 +30,5 @@
 
 
 </html>
+
 
